Use fixed, collapsed navbar only for phone, use Lobster font for brand.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.name {
+.brand, .name {
 	font-family: Lobster, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
